--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ logs/
 .env
 .env.*
 !.env.example
-
+.nvim*
 # -------------------------------------------------------------------
 # AI / training artifacts
 # -------------------------------------------------------------------
